[package]
name          = "prometheus_dhcp_exporter"
version       = "0.1.0"
authors       = ["Francesco Cogno <francesco.cogno@outlook.com>"]
edition       = "2018"

readme        = "README.md"
license       = "MIT"
repository    = "https://github.com/MindFlavor/prometheus_dhcp_exporter"
documentation = "https://github.com/MindFlavor/prometheus_dhcp_exporter"
homepage      = "https://github.com/MindFlavor/prometheus_dhcp_exporter"

keywords      = ["prometheus", "exporter", "dhcp", "dhcpd_pools"]
categories    = ["api-bindings"]


[dependencies]
actix="*"
actix-web="*"
log="*"
env_logger="*"
futures="*"
clap="*"
serde_json = "*"
serde="*"
serde_derive="*"
failure="*"

