[package]
name          = "prometheus_dhcp_exporter"
version       = "0.1.0"
authors       = ["Francesco Cogno <francesco.cogno@outlook.com>"]
edition       = "2018"

readme        = "README.md"
license       = "MIT"
repository    = "https://github.com/MindFlavor/prometheus_dhcp_exporter"
documentation = "https://github.com/MindFlavor/prometheus_dhcp_exporter"
homepage      = "https://github.com/MindFlavor/prometheus_dhcp_exporter"

keywords      = ["prometheus", "exporter", "dhcp", "dhcpd_pools"]
categories    = ["api-bindings"]


[dependencies]
actix="0.7.9"
actix-web="0.7.17"
log="0.4.6"
env_logger="0.6.0"
futures="0.1.25"
clap="2.32.0"
serde_json = "1.0.34"
serde="1.0.84"
serde_derive="1.0.84"
failure="0.1.5"

